fix: horizontal scroll

--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -1,5 +1,11 @@
 .kanban-container {
-    padding: 0.5rem 0;
+  padding: 0.5rem 0;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
   .kanban-board {
     display: flex;
     .lane {
